doc card word break to prof name to prevent overflow of box

--- a/Cloudents.Web/ClientApp/components/results/helpers/documentDetails/documentDetails.less
+++ b/Cloudents.Web/ClientApp/components/results/helpers/documentDetails/documentDetails.less
@@ -1,8 +1,13 @@
 
 @import "../../../../styles/mixin.less";
 .details-row {
+  overflow: hidden;
+  text-overflow: ellipsis;
   .details-wrap {
     padding-top: 5px;
+    .cut-long{
+       word-break: break-all;
+    }
     .aligned {
       font-size: 11px;
       color: @colorBlackNew;
@@ -15,7 +20,6 @@
         }
       .sb-icon-arrow {
         font-size: 12px;
-        //height: 16px;
         width: 12px;
         color: @colorGreyLight;
         text-align: center;
